# musica

./: LICENSE  README.md  pyproject.toml
src/musica/: custom_types.py  guitar.py  tone.py
tests/: test_types.py
