[project]
name = "musica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kristian Zarebski", email = "krizar312@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
musica = "musica:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

